Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <h1>Este es un titulo</h1>
-    <p>Este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es un titulo atractivo e interesante</h1>
+        </div>
+        <p>Y este es el parrafo de inicio donde vamos a explciar las cosas facinantes que se pueden hacer con ramas
+
+        </p>
+    </div>
 
 </body>
 
