--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,11 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+
+        </div>
+
         <div id="post">
             <h1>Este es un titulo atractivo e interesante</h1>
         </div>
