--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,9 @@
         <p>Y este es el parrafo de inicio donde vamos a explciar las cosas facinantes que se pueden hacer con ramas
 
         </p>
+        <p>
+            Los blogs son la mejor manera de compartir información y tus ideas.
+        </p>
     </div>
 
 </body>
